--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,25 @@
-Flask<1
+azure==1.0.3
+azure-common==1.1.4
+azure-mgmt==0.20.2
+azure-mgmt-common==0.20.0
+azure-mgmt-compute==0.20.1
+azure-mgmt-network==0.20.1
+azure-mgmt-nspkg==1.0.0
+azure-mgmt-resource==0.20.1
+azure-mgmt-storage==0.20.0
+azure-nspkg==1.0.0
+azure-servicebus==0.20.1
+azure-servicemanagement-legacy==0.20.2
+azure-storage==0.20.3
+Flask==0.10.1
+httplib2==0.9.2
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+PySocks==1.6.5
+python-dateutil==2.6.0
+pytz==2016.10
+requests==2.12.4
+six==1.10.0
+twilio==5.6.0
+Werkzeug==0.11.5
