--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,6 @@ python-dateutil==2.6.0
 pytz==2016.10
 requests==2.12.4
 six==1.10.0
-twilio==5.6.0
+twilio==3.6.9
 Werkzeug==0.11.5
+wsgiref==0.1.2
