--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,2 @@
-azure==1.0.3
-azure-common==1.1.4
-azure-mgmt==0.20.2
-azure-mgmt-common==0.20.0
-azure-mgmt-compute==0.20.1
-azure-mgmt-network==0.20.1
-azure-mgmt-nspkg==1.0.0
-azure-mgmt-resource==0.20.1
-azure-mgmt-storage==0.20.0
-azure-nspkg==1.0.0
-azure-servicebus==0.20.1
-azure-servicemanagement-legacy==0.20.2
-azure-storage==0.20.3
-click==6.7
-Django==1.10.5
-Flask==0.12
-FontTools==2.4
-futures==3.0.5
-httplib2==0.9.2
-itsdangerous==0.24
-Jinja2==2.9.3
-MarkupSafe==0.23
-oauthlib==0.7.2
-Polygon2==2.0.7
-python-dateutil==2.6.0
-pytz==2016.10
-requests==2.4.3
-requests-oauthlib==0.4.1
-six==1.7.3
-TBB==0.1
-TTFQuery==1.0.5
-tweepy==3.2.0
-twilio==5.6.0
-twilio-3.6.6-py27-none-any.whl
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-VPython==6.11
-Werkzeug==0.11.15
-wheel==0.29.0
-wxPython==3.0.0.0
-wxPython-common==3.0.0.0
+Flask
+requests
